_config.yml update by UKRN Workshop Builder

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 ---
-topic: open-data
+topic: data-sharing
 title: Data Sharing for Meta-Research (U o Bristol) - TEST
 instructors:
   - Jackie Thompson
@@ -222,23 +222,4 @@ ukrn_wb:
           - - _includes/intro
 
 ---
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 null
